--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ $(function() {
 		
 			<div id="toplinks"><a href="http://www.carmelhigh.org" target="_blank"><span id="topwlines"><p>CHS WEBSITE</p></span></a></div>
 			<div id="toplinks"><a href="/contact"><span id="topwlines"><p>CONTACT US</p></span></a></div>
-			<div id="toplinks"><a href="http://www.tinyurl.com/chs-robotics-2016" target="_blank"><span id="topwlines"><p>HOUR LOG</p></span></a></div>
+			<div id="toplinks"><a href="https://goo.gl/forms/9EkPM8Zn5kG7MVTq2"><span id="topwlines"><p>PRE-SEASON HOUR LOG</p></span></a></div>
 		
 	</div>
 	<div id="bottomfooter">
