--- a/contact/index.html
+++ b/contact/index.html
@@ -49,16 +49,18 @@ $(function() {
          <li><a href="../">HOME</a></li>
          <li><a href="../about">ABOUT</a></li>
          <li><a href="../outreach">OUTREACH</a></li>
-		 <li><a href="#">GALLERY</a></li>
          <li><a href="../sponsors">SPONSORS</a></li>
+	 <li><a href="#">GALLERY</a></li>
      </ul>
 </div>
 <h1>CONTACT</h1>
 <div id="paragraph">
 	<p>FRC Team 2035 can be contacted by either email or phone. </p>
-	<p>3600 Ocean Ave.<br>
-Carmel CA, 93922 <br>
-831-624-1821</p>
+	<p>rockinbots2035@gmail.com<br>
+	<br>
+	3600 Ocean Ave.<br>
+	Carmel CA, 93922 <br>
+	831-624-1821 ext 3706</p>
 	</div>
 	
 </div>
@@ -66,11 +68,11 @@ Carmel CA, 93922 <br>
 		
 			<div id="toplinks"><a href="http://www.carmelhigh.org" target="_blank"><span id="topwlines"><p>CHS WEBSITE</p></span></a></div>
 			<div id="toplinks"><a href="/contact"><span id="topwlines"><p>CONTACT US</p></span></a></div>
-			<div id="toplinks"><a href="http://www.tinyurl.com/chs-robotics-2016" target="_blank"><span id="topwlines"><p>HOUR LOG</p></span></a></div>
+			<div id="toplinks"><a href="http://www.tinyurl.com/chs-robotics-2016" target="_blank"><span id="topwlines"><p>PRE-SEASON HOUR LOG</p></span></a></div>
 		
 	</div>
 	<div id="bottomfooter">
-	<p> Copyright 2016 FRC Team 2035 | TroubleMaker Technologies | All Rights Reserved </p>
+	<p> Copyright 2018 FRC Team 2035 | TroubleMaker Technologies | All Rights Reserved </p>
 	<div class = "elem">
 	<div id="media2"><ul>
 	<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="../whiteFacebook.png"></a></li>
