--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ $(function() {
 	<br><br><br><br><br><br></br>
 	</div>
 	
-<?php include "header.php"; ?>
+<?php include "footer.php"; ?>
 
 </body>
 </html>
