--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ $(function() {
 	<br><br><br><br><br><br></br>
 	</div>
 	
-<?php include 'footer.html'; ?>
+<script src="footer.html"></script>
 
 </body>
 </html>
