--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ $(function() {
      <ul>
           <li><a href="#">HOME</a></li>
          <li><a href="/about">ABOUT</a></li>
-         <li><a href="/outreach">OUTREACH</a></li>
+         <li><a href="/outreach">OUTRACH</a></li>
          <li><a href="/sponsors">SPONSORS</a></li>
 	  <li><a href="/gallery">GALLERY</a></li>
      </ul>
