--- a/index.html
+++ b/index.html
@@ -71,11 +71,14 @@ $(function() {
 	
 <body>
 
-<div data-include="header"></div>
+<div data-include="header">
 	
 <div id="center">
 	<img src="https://cloud.githubusercontent.com/assets/6074292/13198238/cbe82efa-d7b8-11e5-9b45-e105d51e1f84.png">
 </div>
+</div>
+	
+	
 <br><br>
 <div class = "elem">
     <div id="media"><ul>
