--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="//code.jquery.com/jquery-3.1.1.js"></script>
 <script src="https://github.com/kswedberg/jquery-smooth-scroll/blob/master/jquery.smooth-scroll.min.js"></script>
 <script>
 $('.elem').mousemove(function() {
@@ -33,7 +32,6 @@ $('.elem').mousemove(function() {
         $(this).css('-webkit-transform', g_CSS);
     }
 });
-
 $('.smooth').on('click', function() {
     $.smoothScroll({
         scrollElement: $('body'),
@@ -59,19 +57,41 @@ $(function() {
 </script>
 </head>
 
-<script>
-  $(function(){
-    var includes = $('[data-include]');
-    jQuery.each(includes, function(){
-      var file = 'views/' + $(this).data('include') + '.html';
-      $(this).load(file);
-    });
-  });
-</script>
-	
+
 <body>
 
-<div data-include="header">
+<div id="home">
+  <a id="about" class="smooth"></a>
+  <div id="zeppelin">
+	<img src="zeppelin3.png">
+  </div>
+  <div id="nav">
+     <ul>
+          <li><a href="#">HOME</a></li>
+         <li><a href="/about">ABOUT</a></li>
+         <li><a href="/outreach">OUTREACH</a></li>
+		 <li><a href="/gallery">GALLERY</a></li>
+         <li><a href="/sponsors">SPONSORS</a></li>
+     </ul>
+</div>
+<div id="center">
+	<img src="https://cloud.githubusercontent.com/assets/6074292/13198238/cbe82efa-d7b8-11e5-9b45-e105d51e1f84.png">
+</div>
+<br><br>
+<div class = "elem">
+    <div id="media"><ul>
+	<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="redIG.png"></a></li>
+	<li><a href="https://twitter.com/roborockinbots" target="_blank" title="Twitter"><img src="redtwitter.png"></a></li>
+	<li><a href="http://www.instagram.com/the.rockin.bots" target="_blank" title="Instagram"><img src="redIG2.png"></a></li>
+	<li><a href="https://www.github.com/CarmelRobotics" target="_blank" title="GitHub"><img src="redIG3.png"></a></li>
+	</ul>
+</div>
+</div>
+<div id="scrollDown"><a href="#page2">
+    <div class ="text">SCROLL DOWN</div>
+	<img src="background1.png" class="image"/></a>
+</div>
+</div>
  
 <div id="page2">
   <a id="about" class="smooth"></a>
@@ -83,8 +103,33 @@ $(function() {
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/jZbdyyfsECs" frameborder="0" allowfullscreen></iframe>
 	<br><br><br><br><br><br></br>
 	</div>
+	
+</div>
 
-<div data-include="footer"></div>
+    <div id ="page3">
+	<div id="topfooter">
+		
+			<div id="toplinks"><a href="http://www.carmelhigh.org" target="_blank"><span id="topwlines"><p>CHS WEBSITE</p></span></a></div>
+			<div id="toplinks"><a href="/contact"><span id="topwlines"><p>CONTACT US</p></span></a></div>
+			<div id="toplinks"><a href="http://www.tinyurl.com/chs-robotics-2016" target="_blank"><span id="topwlines"><p>HOUR LOG</p></span></a></div>
+		
+	</div>
+	<div id="bottomfooter">
+	<p> Copyright 2016 FRC Team 2035 | All Rights Reserved  </p>
+	<div class = "elem">
+	<div id="media2"><ul>
+	<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="whiteFacebook.png"></a></li>
+	<li><a href="https://twitter.com/roborockinbots" target="_blank" title="Twitter"><img src="whiteTwitter.png"></a></li>
+	<li><a href="http://www.instagram.com/the.rockin.bots" target="_blank" title="Instagram"><img src="whiteIG.png"></a></li>
+	<li><a href="https://www.github.com/CarmelRobotics" target="_blank" title="GitHub"><img src="whiteGit.png"></a></li>
+	</ul>
+	</div>
+	</div>
+        
+	<!--<div id = "tear"><img src="jackscats/tear.png"></div>-->
+	<div id="tear"><img src='tear2.png' onmouseover="this.src='mcfarlin.png';" onmouseout="this.src='tear2.png';" /></div>
+</div>
+        </div>
 
 </body>
 </html>
