--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="httpe://code.jquery.com/jquery-3.1.1.js"></script>
 <script src="https://github.com/kswedberg/jquery-smooth-scroll/blob/master/jquery.smooth-scroll.min.js"></script>
 <script>
 $('.elem').mousemove(function() {
@@ -73,18 +73,6 @@ $(function() {
 
 <div id="home">
   <a id="about" class="smooth"></a>
-  <div id="zeppelin">
-	<img src="zeppelin3.png">
-  </div>
-  <div id="nav">
-     <ul>
-          <li><a href="#">HOME</a></li>
-         <li><a href="/about">ABOUT</a></li>
-         <li><a href="/outreach">OUTREACH</a></li>
-	     <li><a href="/sponsors">SPONSORS</a></li>
-	     <li><a href="/gallery">GALLERY</a></li>
-     </ul>
-</div>
   <div data-include="header"></div>
 	
 <div id="center">
