--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ $(function() {
 <div class = "elem">
     <div id="media"><ul>
 	<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="redIG.png"></a></li>
-	<li><a href="https://twitter.com/roborockinbots" target="_blank" title="Twitter"><img src="redtwitter.png"></a></li>
+	<li><a href="https://twitter.com/roborockinbots" target="_blank" title="Twiter"><img src="redtwitter.png"></a></li>
 	<li><a href="http://www.instagram.com/the.rockin.bots" target="_blank" title="Instagram"><img src="redIG2.png"></a></li>
 	<li><a href="https://www.github.com/CarmelRobotics" target="_blank" title="GitHub"><img src="redIG3.png"></a></li>
 	</ul>
