--- a/index.html
+++ b/index.html
@@ -108,30 +108,7 @@ $(function() {
 	
 </div>
 
-    <div id ="page3">
-	<div id="topfooter">
-		
-			<div id="toplinks"><a href="http://www.carmelhigh.org" target="_blank"><span id="topwlines"><p>CHS WEBSITE</p></span></a></div>
-			<div id="toplinks"><a href="/contact"><span id="topwlines"><p>CONTACT US</p></span></a></div>
-			<div id="toplinks"><a href="http://www.tinyurl.com/chs-robotics-2016" target="_blank"><span id="topwlines"><p>HOUR LOG</p></span></a></div>
-		
-	</div>
-	<div id="bottomfooter">
-	<p> Copyright 2016 FRC Team 2035 | All Rights Reserved  </p>
-	<div class = "elem">
-	<div id="media2"><ul>
-	<li><a href="https://www.facebook.com/FRC-Team-2035-RoboRockinBots-191685760860634/" target="_blank" title="Facebook"><img src="whiteFacebook.png"></a></li>
-	<li><a href="https://twitter.com/roborockinbots" target="_blank" title="Twitter"><img src="whiteTwitter.png"></a></li>
-	<li><a href="http://www.instagram.com/the.rockin.bots" target="_blank" title="Instagram"><img src="whiteIG.png"></a></li>
-	<li><a href="https://www.github.com/CarmelRobotics" target="_blank" title="GitHub"><img src="whiteGit.png"></a></li>
-	</ul>
-	</div>
-	</div>
-        
-	<!--<div id = "tear"><img src="jackscats/tear.png"></div>-->
-	<div id="tear"><img src='tear2.png' onmouseover="this.src='mcfarlin.png';" onmouseout="this.src='tear2.png';" /></div>
-</div>
-        </div>
+    <div data-include="footer"></div>
 
 </body>
 </html>
