--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@ $(function() {
   $(function(){
     var includes = $('[data-include]');
     jQuery.each(includes, function(){
-      var file = '..views/' + $(this).data('include') + '.html';
+      var file = '/views/' + $(this).data('include') + '.html';
       $(this).load(file);
     });
   });
