--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@ $(function() {
   <div data-include="header"></div>
   
 <h1>ABOUT</h1>
-<h2>ORIGNS</h2>
+<h2>ORIGINS</h2>
 	<div id="image">
 	<img src="https://cloud.githubusercontent.com/assets/6074292/13198265/74b82d32-d7b9-11e5-80cb-edc25e1c1115.jpg">
 	</div>
