--- a/about/index.html
+++ b/about/index.html
@@ -52,7 +52,7 @@ $(function() {
 
 <div id="page1">
   <a id="about" class="smooth"></a>
-  <div data-include="header"></div>
+  <b><div data-include="header"></div></b>
   
 <h1>ABOUT</h1>
 <h2>ORIGINS</h2>
