--- a/contact/index.html
+++ b/contact/index.html
@@ -52,18 +52,8 @@ $(function() {
 
 <div id="page1">
   <a id="about" class="smooth"></a>
-  <div id="zeppelin">
-	<img src="https://cloud.githubusercontent.com/assets/6074292/13029067/28bdeb7a-d236-11e5-956d-4d0a2aa72d52.png">
-  </div>
-  <div id="nav">
-     <ul>
-         <li><a href="../">HOME</a></li>
-         <li><a href="../about">ABOUT</a></li>
-         <li><a href="../outreach">OUTREACH</a></li>
-         <li><a href="../sponsors">SPONSORS</a></li>
-	 <li><a href="#">GALLERY</a></li>
-     </ul>
-</div>
+  <b><div data-include="header"></div></b>
+	
 <h1>CONTACT</h1>
 <div id="paragraph">
 	<p>FRC Team 2035 can be contacted by either email or phone. </p>
