--- a/outreach/index.html
+++ b/outreach/index.html
@@ -53,18 +53,8 @@ $(function() {
 
 <div id="page1">
   <a id="about" class="smooth"></a>
-  <div id="zeppelin">
-	<img src="https://cloud.githubusercontent.com/assets/6074292/13029067/28bdeb7a-d236-11e5-956d-4d0a2aa72d52.png">
-  </div>
-  <div id="nav">
-     <ul>
-         <li><a href="../">HOME</a></li>
-         <li><a href="../about">ABOUT</a></li>
-         <li><a href="#"><b>OUTREACH</b></a></li>
-		 <li><a href="../gallery">GALLERY</a></li>
-         <li><a href="../sponsors">SPONSORS</a></li>
-     </ul>
-</div>
+  <b><div data-include="header"></div></b>
+	
 <h1>OUTREACH</h1>
 	<div id="main">
 		<p>Team 2035 believes that the most important way to spread STEM and the message of FIRST is to start in our own community by providing inspiration, assistance, and resources to people of all ages on the Central Coast of California.  As the 2016 Silicon Valley Regional Chairman's Awardee, The Rockin' Bots take pride in how we have grown enthusiasm for STEM both in our school and throughout the Monterey Peninsula.</p>
